--- a/login/www/suggestions/index.html
+++ b/login/www/suggestions/index.html
@@ -9,10 +9,8 @@
     <h1>Suggestion System</h1>
     <h2>Home</h2>
     <ul>
-        <li><a href="manage/index.php">Manage the suggestions you
-            have made</a></li>
-        <li><a href="view/index.php">View the suggestions you have
-            received</a></li>
+        <li><a href="manage/index.php">Manage the user </a></li>
+        <li><a href="view/index.php">View the user</a></li>
         <li><a href="admin/index.php">System administration</a></li>
     </ul>
 </body>
