--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset = "utf-8">
     <meta http-equiv = "X-UA-Compatible" content = "IE = edge">
     <meta name = "viewport" content = "width = device-width, initial-scale = 1">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link href="css/style.css" rel="stylesheet">
 		<link href = "css/bootstrap.min.css" rel = "stylesheet">
 		<link href="css/bootstrap-theme.min.css" rel="stylesheet">
 		<!-- Add in background styling based on  -->
@@ -165,7 +165,7 @@
 				<div class="row">
 				  <div class="col-sm-6 col-md-4">
 				    <div class="thumbnail">
-				      <img class="myImg" src="images/product3.png" alt="info">
+				      <img class="myImg" src="images/product3.png" alt="A beautiful, hand crafted sea-glass necklace">
 				      <div class="caption">
 				        <h3>Thumbnail label</h3>
 				        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -183,7 +183,7 @@
 				  </div>
 					<div class="col-sm-6 col-md-4">
 				    <div class="thumbnail">
-							<img class="myImg" src="images/test-logo.png" alt="thumbnail">
+							<img class="myImg" src="images/product9.png" alt="Beautiful, hand crafted sea-glass earrings">
 							<div class="caption">
 				        <h3>Thumbnail label</h3>
 				        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -201,7 +201,7 @@
 				  </div>
 					<div class="col-sm-6 col-md-4">
 				    <div class="thumbnail">
-				      <img class="myImg" src="images/test-logo.png" alt="thumbnail">
+				      <img class="myImg" src="images/product4.png" alt="A beautiful, hand crafted sea-glass necklace">
 							<div class="caption">
 				        <h3>Thumbnail label</h3>
 				        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -370,8 +370,8 @@
 					</div>
 				</div>
 			</div>
+			<br><br><br><br>
 		</section>
-		<br><br><br><br>
 		<section id="aboutUs">
 			<div class="container-fluid">
 				<br><br><br>
@@ -380,48 +380,49 @@
 						<h1> About Us</h1>
 					</div>
 				</div>
-					<div class="row">
-						<div class="col-sm-4">
-							<h2>  Locally sourced, hand-made Sea Glass and Jewelry for the avid ocean lover  </h2><br>
-							<img src="images/test-logo.png" class="img-responsive"  width="300" height="300" alt="logo">
-						</div>
-						<div class="col-sm-4">
-							<h2> Locally sourced, hand-made Sea Glass and Jewelry for the avid ocean lover </h2><br>
-							<img src="images/test-logo.png" class="img-responsive"  width="300" height="300" alt="logo">
-						</div>
-						<div class="col-sm-4">
-							<h2> Locally sourced, hand-made Sea Glass and Jewelry for the avid ocean lover </h2><br>
-							<img src="images/test-logo.png" class="img-responsive"  width="300" height="300" alt="logo">
-						</div>
+				<div class="row">
+					<div class="col-sm-4">
+						<h2>  Locally sourced, hand-made Sea Glass and Jewelry for the avid ocean lover  </h2><br>
+						<img src="images/test-logo.png" class="img-responsive"  width="300" height="300" alt="logo">
 					</div>
-					<div class="row">
-						<div class="col-sm-4">
-							<h2>  Locally sourced, hand-made Sea Glass and Jewelry for the avid ocean lover  </h2><br>
-							<img src="images/test-logo.png" class="img-responsive"  width="300" height="300" alt="logo">
-						</div>
-						<div class="col-sm-4">
-							<h2> Locally sourced, hand-made Sea Glass and Jewelry for the avid ocean lover </h2><br>
-							<img src="images/test-logo.png" class="img-responsive"  width="300" height="300" alt="logo">
-						</div>
-						<div class="col-sm-4">
-							<h2> Locally sourced, hand-made Sea Glass and Jewelry for the avid ocean lover </h2><br>
-							<img src="images/test-logo.png" class="img-responsive"  width="300" height="300" alt="logo">
-						</div>
+					<div class="col-sm-4">
+						<h2> Locally sourced, hand-made Sea Glass and Jewelry for the avid ocean lover </h2><br>
+						<img src="images/test-logo.png" class="img-responsive"  width="300" height="300" alt="logo">
+					</div>
+					<div class="col-sm-4">
+						<h2> Locally sourced, hand-made Sea Glass and Jewelry for the avid ocean lover </h2><br>
+						<img src="images/test-logo.png" class="img-responsive"  width="300" height="300" alt="logo">
 					</div>
 				</div>
-			</section>
+				<div class="row">
+					<div class="col-sm-4">
+						<h2>  Locally sourced, hand-made Sea Glass and Jewelry for the avid ocean lover  </h2><br>
+						<img src="images/test-logo.png" class="img-responsive"  width="300" height="300" alt="logo">
+					</div>
+					<div class="col-sm-4">
+						<h2> Locally sourced, hand-made Sea Glass and Jewelry for the avid ocean lover </h2><br>
+						<img src="images/test-logo.png" class="img-responsive"  width="300" height="300" alt="logo">
+					</div>
+					<div class="col-sm-4">
+						<h2> Locally sourced, hand-made Sea Glass and Jewelry for the avid ocean lover </h2><br>
+						<img src="images/test-logo.png" class="img-responsive"  width="300" height="300" alt="logo">
+					</div>
+				</div>
+			</div>
+			<br><br><br><br>
+			<div class="jumbotron" style="background-color:#2eb8b8">
 				<div class="container-fluid">
-					<div class="jumbotron" style="background-color:#2eb8b8">
-						<div class="row">
-							<div class="col-sm-4">
-								<br><img src="images/test-logo.png" class="img-rounded img-responsive"  width="200" height="200" alt="logo">
-							</div>
-							<div class="col-sm-8">
-								<br><h1> Footer Info here </h1>
-							</div>
+					<div class="row">
+						<div class="col-sm-4">
+							<br><img src="images/test-logo.png" class="img-rounded img-responsive"  width="200" height="200" alt="logo">
+						</div>
+						<div class="col-sm-8">
+							<br><h1> Footer Info here </h1>
 						</div>
 					</div>
 				</div>
+			</div>
+		</section>
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src = "https://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
