--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				         <span class = "icon-bar"></span>
 				         <span class = "icon-bar"></span>
 				      </button>
-							<a class = "navbar-brand" href="/index.html"> <img src="images/test-logo.png" class="img-responsive"  width="70" height="70" alt="logo"></a>
+							<a class = "navbar-brand" href="/index.html"> <img src="images/marianlogo.png" class="img-responsive"  width="70" height="70" alt="logo"></a>
 						</div>
 						<div class = "collapse navbar-collapse" id = "example-navbar-collapse">
 							<ul class = "nav navbar-nav">
