Added content to After Care subsection.

--- a/index.html
+++ b/index.html
@@ -446,35 +446,26 @@
 				<br><br><br>
 				<div class="row">
 					<div class="col-sm-12">
-						<h1> After Care </h1>
+						<h1> After Care </h1><br>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-sm-4">
-						<h2>  Locally sourced, hand-made Sea Glass and Jewelry for the avid ocean lover  </h2><br>
-						<img src="images/test-logo.png" class="img-responsive"  width="300" height="300" alt="logo">
+					<div class="col-sm-5">
+						<br><h4> To give the glass a GLOSSY look, the may rub a tiny drop of glycerine
+						(small bottles are sold in the cake decorating aisle of a grocery store)
+						onto the glass. Let the glass dry and it will have a glossy finish. True
+						seaglass is porous, therefore it will absorb some of the glycerine and make
+						it shiny. </h3><br>
+						<img src="images/glycerin.jpg" class="img-responsive"  width="300" height="300" alt="glycerin">
 					</div>
-					<div class="col-sm-4">
-						<h2> Locally sourced, hand-made Sea Glass and Jewelry for the avid ocean lover </h2><br>
-						<img src="images/test-logo.png" class="img-responsive"  width="300" height="300" alt="logo">
+					<div class="col-sm-2">
+						
 					</div>
-					<div class="col-sm-4">
-						<h2> Locally sourced, hand-made Sea Glass and Jewelry for the avid ocean lover </h2><br>
-						<img src="images/test-logo.png" class="img-responsive"  width="300" height="300" alt="logo">
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-4">
-						<h2>  Locally sourced, hand-made Sea Glass and Jewelry for the avid ocean lover  </h2><br>
-						<img src="images/test-logo.png" class="img-responsive"  width="300" height="300" alt="logo">
-					</div>
-					<div class="col-sm-4">
-						<h2> Locally sourced, hand-made Sea Glass and Jewelry for the avid ocean lover </h2><br>
-						<img src="images/test-logo.png" class="img-responsive"  width="300" height="300" alt="logo">
-					</div>
-					<div class="col-sm-4">
-						<h2> Locally sourced, hand-made Sea Glass and Jewelry for the avid ocean lover </h2><br>
-						<img src="images/test-logo.png" class="img-responsive"  width="300" height="300" alt="logo">
+					<div class="col-sm-5">
+						<img src="images/rocks.jpg" class="img-responsive"  width="300" height="300" alt="logo"><br>
+						<h4> Some people prefer the natural frosted look that the glass already has. If
+						this is the case, simply washing the jewelry with warm water, possibly mixing in table
+						salt will be sufficient. </h4><br>
 					</div>
 				</div>
 			</div>
