--- a/index.html
+++ b/index.html
@@ -525,8 +525,14 @@
       <div class="col-sm-4">
        <br><img src="images/marianlogo.png" class="img-rounded img-responsive"  width="200" height="200" alt="logo">
       </div>
-      <div class="col-sm-8">
-       <br><h1> Footer Info here </h1>
+      <div class="col-sm-4">
+        <h1> Thank you! </h1>
+      </div>
+      <div class="col-sm-4">
+        <h4><strong>Must Be Marian's New England Sea Glass</strong></h4>
+        <h4><a href="mailto:mustbemarians@gmail.com"> mustbemarians@gmail.com </a> </h4>
+        <h4>Fremont, NH 03044</h4>
+        <h4>603-674-5735</h4>
       </div>
      </div>
     </div>
