--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
              <span class = "icon-bar"></span>
              <span class = "icon-bar"></span>
           </button>
-       <a class = "navbar-brand" href="/index.html"> <img src="images/marianlogo.png" class="img-responsive"  width="70" height="70" alt="logo"></a>
+       <a class = "navbar-brand" href="index.html"> <img src="images/marianlogo.png" class="img-responsive"  width="70" height="70" alt="logo"></a>
       </div>
       <div class = "collapse navbar-collapse" id = "example-navbar-collapse">
        <ul class = "nav navbar-nav">
@@ -459,7 +459,7 @@
 				<div class="col-sm-3">
           <div class="row">
             <div class="col-sm-12">
-              <h3> To give the glass a <strong>glossy</strong> look, the may rub a tiny drop of glycerine
+              <h3> To give the glass a <strong>glossy</strong> look, the owner may rub a tiny drop of glycerine
    						(small bottles are sold in the cake decorating aisle of a grocery store)
    						onto the glass. </h3>
             </div>
@@ -476,7 +476,7 @@
           <br><img src="images/glycerin.jpg" class="img-responsive img-rounded"  width="300" height="300" alt="glycerin">
         </div>
  				<div class="col-sm-3">
-          <h3> Some people prefer the natural frosted look that the glass already has. If
+          <h3> Some customer prefer the natural frosted look that the glass already has. If
           this is the case, simply washing the jewelry with warm water, possibly mixing in table
           salt will be sufficient. </h3>
  				</div>
